sketch out intended interface through documentation

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,7 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.097
+Test::MinimumVersion.max_target_perl = 5.008    ; may go higher later on
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
