working implementation of boolean schemas and empty object schemas
and acceptance tests that should always pass

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ license             = Perl_5
 [@Author::ETHER]
 :version = 0.154
 bugtracker = github
+Test::MinimumVersion.max_target_perl = 5.010    ; may go higher later on
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
