use the GitHub issue tracker

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,8 @@ copyright_year      = 2020
 license             = Perl_5
 
 [@Author::ETHER]
-:version = 0.097
+:version = 0.154
+bugtracker = github
 Test::MinimumVersion.max_target_perl = 5.008    ; may go higher later on
 
 [Prereqs / DevelopRequires]
