--- a/dist.ini
+++ b/dist.ini
@@ -11,3 +11,14 @@ Test::MinimumVersion.max_target_perl = 5.008    ; may go higher later on
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
+
+
+; minimum needed for a modest release:
+; - $ref ok, but only json pointers within this doc (fragment only)
+; - no $id, $anchor, $recursiveAnchor, $recursiveRef (die on sight, to be caught and turned into an Error).
+; - no multi-docs -- one object in the main doc. no loading.
+; - no annotations
+; - $schema is 2019-09 only
+; - output format is flag or basic only
+; - no 'format' assertion
+; - config options: output_format, short_circuit.  (basic + short_circut=1 is legal - we will stop at the first error but you still get that in an ::Error object.)
