more misc fixes

--- a/dist.ini
+++ b/dist.ini
@@ -22,3 +22,23 @@ Test::Warnings = 0
 ; - output format is flag or basic only
 ; - no 'format' assertion
 ; - config options: output_format, short_circuit.  (basic + short_circut=1 is legal - we will stop at the first error but you still get that in an ::Error object.)
+;
+;
+; tags for github issues:
+; "conch v4.0 requirements"
+;   e.g. $id to other docs, preloading multiple docs, results in basic format, format assertions, all draft07 keywords
+; "OAS 3.1 compliance"   - e.g. support for parsing $schema and $vocabulary - https://github.com/OAI/OpenAPI-Specification/issues/2017
+; "draft2019-09 compliance" - $anchor, $recursiveAnchor, $recursiveRef, annotations...
+;
+; 
+; add SEE ALSO:
+; Data::JSONSchema::Ajv  <-- which should get a patch to use Test::JSON::Schema::Acceptance
+; JSV -- https://grep.cpanauthors.org/search?q=JSON-Schema-Test-Suite&group_by=distribution&offset=&distribution=JSV
+; JSV::Compiler -- https://grep.cpanauthors.org/search?q=JSON-Schema-Test-Suite&offset=&distribution=JSV-Compiler&group_by=distribution
+; kk
+;
+;
+; another idea for the gh board:
+; JSON::Schema::Draft201909 -> Type::Tiny converter
+;   or the other way around?
+;
