--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,13 @@ license             = Perl_5
 :version = 0.154
 bugtracker = github
 Test::MinimumVersion.max_target_perl = 5.010    ; may go higher later on
+AutoPrereqs.test_finder = UserTests
+AutoPrereqs.develop_finder[0] = :ExtraTestFiles
+AutoPrereqs.develop_finder[1] = ExtraTests
 
-[Prereqs / DevelopRequires]
-Test::Warnings = 0
+[FileFinder::Filter / UserTests]
+finder = :TestFiles
+skip = 99-acceptance.t$
+
+[FileFinder::ByName / ExtraTests]
+file  = t/99-acceptance.t
