add pull request template to discourage patches

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ Test::MinimumVersion.max_target_perl = 5.010    ; may go higher later on
 AutoPrereqs.test_finder = UserTests
 AutoPrereqs.develop_finder[0] = :ExtraTestFiles
 AutoPrereqs.develop_finder[1] = ExtraTests
+Git::GatherDir.exclude_filename = pull_request_template.md
 
 [FileFinder::Filter / UserTests]
 finder = :TestFiles
