--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,9 @@ AutoPrereqs.test_finder = UserTests
 AutoPrereqs.develop_finder[0] = :ExtraTestFiles
 AutoPrereqs.develop_finder[1] = ExtraTests
 Git::GatherDir.exclude_filename = pull_request_template.md
+Test::ReportPrereqs.include[0] = JSON::PP
+Test::ReportPrereqs.include[1] = Cpanel::JSON::XS
+Test::ReportPrereqs.include[2] = JSON::XS
 
 [FileFinder::Filter / UserTests]
 finder = :TestFiles
