--- a/dist.ini
+++ b/dist.ini
@@ -13,3 +13,6 @@ Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = Cpanel::JSON::XS
 Test::ReportPrereqs.include[2] = JSON::XS
 Test::ReportPrereqs.include[3] = Mojolicious
+
+[ShareDir]
+dir = share
