--- a/dist.ini
+++ b/dist.ini
@@ -12,3 +12,4 @@ Git::GatherDir.exclude_filename = pull_request_template.md
 Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = Cpanel::JSON::XS
 Test::ReportPrereqs.include[2] = JSON::XS
+Test::ReportPrereqs.include[3] = Mojolicious
