implement the "format" keyword as an assertion
all the draft2019-09 formats are supported, with two exceptions:

- iri-reference is so loose, there isn't really anything to test for
- uri-template is quite complicated and has limited usecases

Some additional test cases are included here that are submitted to
the test suite in PR 396.

Results using Test::JSON::Schema::Acceptance 0.999
with commit 817b724b7a64d7c18a8232aa32b5f1cc1d6dd153 (2.0.0-215-g817b724)
from git://github.com/json-schema-org/JSON-Schema-Test-Suite.git:

filename                                    pass  fail
------------------------------------------------------
additionalItems.json                          11     0
additionalProperties.json                     15     0
allOf.json                                    30     0
anchor.json                                    6     0
anyOf.json                                    18     0
boolean_schema.json                           18     0
const.json                                    38     0
contains.json                                 18     0
default.json                                   4     0
defs.json                                      2     0
dependentRequired.json                        20     0
dependentSchemas.json                         13     0
enum.json                                     31     0
exclusiveMaximum.json                          4     0
exclusiveMinimum.json                          4     0
format.json                                  102     0
id.json                                       13     0
if-then-else.json                             22     0
items.json                                    26     0
maxContains.json                              10     0
maxItems.json                                  4     0
maxLength.json                                 5     0
maxProperties.json                             8     0
maximum.json                                   8     0
minContains.json                        

--- a/dist.ini
+++ b/dist.ini
@@ -20,3 +20,11 @@ dir = share
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
+
+[Prereqs::Soften]
+to_relationship = suggests
+copy_to = develop.requires
+module = Time::Moment
+module = Data::Validate::Domain
+module = Email::Address::XS
+module = Net::IDN::Encode
