suggest some XS modules to speed things up

--- a/dist.ini
+++ b/dist.ini
@@ -16,3 +16,7 @@ Test::ReportPrereqs.include[3] = Mojolicious
 
 [ShareDir]
 dir = share
+
+[Prereqs / RuntimeSuggests]
+Class::XSAccessor = 0
+Type::Tiny::XS = 0
