implement format: idn-email, and swap out email implementation

--- a/dist.ini
+++ b/dist.ini
@@ -20,5 +20,5 @@ dir = share
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
-Email::Valid = 0
+Email::Address::XS = 0
 Data::Validate::Domain = 0
