squash! clean up formats

--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,7 @@ dir = share
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
-Email::Address::XS = 0
-Data::Validate::Domain = 0
 Time::Moment = 0
+Data::Validate::Domain = 0
+Email::Address::XS = 0
+Net::IDN::Encode = 0
