sq optional prereq cleanup and docs

--- a/dist.ini
+++ b/dist.ini
@@ -20,7 +20,11 @@ dir = share
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
-Time::Moment = 0
-Data::Validate::Domain = 0
-Email::Address::XS = 0
-Net::IDN::Encode = 0
+
+[Prereqs::Soften]
+to_relationship = suggests
+copy_to = develop.requires
+module = Time::Moment
+module = Data::Validate::Domain
+module = Email::Address::XS
+module = Net::IDN::Encode
