--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,9 @@ Test::ReportPrereqs.include[3] = Mojolicious
 [ShareDir]
 dir = share
 
+[Prereqs / RuntimeRequires]
+Mojolicious = 7.23  ; Mojo::URL::to_unsafe_string
+
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
