separate keyword implementations out into vocabulary classes

--- a/dist.ini
+++ b/dist.ini
@@ -10,12 +10,15 @@ eval = do './update-schemas'; die $@ if $@
 [@Author::ETHER]
 :version = 0.154
 bugtracker = github
+surgical_podweaver = 1
 Test::MinimumVersion.max_target_perl = 5.016    ; may go higher later on
 Git::GatherDir.exclude_filename = pull_request_template.md
 Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = Cpanel::JSON::XS
 Test::ReportPrereqs.include[2] = JSON::XS
 Test::ReportPrereqs.include[3] = Mojolicious
+
+; authordep Dist::Zilla::Plugin::SurgicalPodWeaver
 
 [ShareDir]
 dir = share
