check for updates to reference schemas before releasing

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,9 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2020
 license             = Perl_5
 
+[Run::BeforeRelease]
+eval = do './update-schemas'; die $@ if $@
+
 [@Author::ETHER]
 :version = 0.154
 bugtracker = github
