cross-index which optional deps are needed for which formats

--- a/dist.ini
+++ b/dist.ini
@@ -31,7 +31,7 @@ Type::Tiny::XS = 0
 [Prereqs::Soften]
 to_relationship = suggests
 copy_to = develop.requires
-module = Time::Moment
-module = Data::Validate::Domain
-module = Email::Address::XS
-module = Net::IDN::Encode
+module = Time::Moment           ; required for format 'date-time', 'date', 'time'
+module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
+module = Email::Address::XS     ; required for format 'email', 'idn-email'
+module = Net::IDN::Encode       ; required for format 'idn-hostname'
