rename to JSON::Schema::Modern

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@
 /.latest
 /JSON-Schema-Draft201909-*/
 /JSON-Schema-Draft201909-*.tar.gz
+/JSON-Schema-Modern-*/
+/JSON-Schema-Modern-*.tar.gz
 /TODO
