--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name                = JSON-Schema-Draft201909
+name                = JSON-Schema-Modern
 author              = Karen Etheridge <ether@cpan.org>
 copyright_holder    = Karen Etheridge
 copyright_year      = 2020
