remove all code, replacing with subclasses of equivalent in JSM

--- a/dist.ini
+++ b/dist.ini
@@ -4,36 +4,9 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2020
 license             = Perl_5
 
-[Run::BeforeRelease]
-eval = do './update-schemas'; die $@ if $@
-
 [@Author::ETHER]
 :version = 0.154
 bugtracker = github
 Test::MinimumVersion.max_target_perl = 5.016    ; may go higher later on
-Git::GatherDir.exclude_filename = pull_request_template.md
-Test::ReportPrereqs.include[0] = JSON::PP
-Test::ReportPrereqs.include[1] = Cpanel::JSON::XS
-Test::ReportPrereqs.include[2] = JSON::XS
-Test::ReportPrereqs.include[3] = Mojolicious
 
-[ShareDir]
-dir = share
-
-[Prereqs / RuntimeRequires]
-Mojolicious = 7.23  ; Mojo::URL::to_unsafe_string
-Email::Address::XS = 1.01   ; is_valid; softened later
-
-[Prereqs / RuntimeSuggests]
-Class::XSAccessor = 0
-Type::Tiny::XS = 0
-Ref::Util::XS = 0
-Cpanel::JSON::XS = 0
-
-[Prereqs::Soften]
-to_relationship = suggests
-copy_to = develop.requires
-module = Time::Moment           ; required for format 'date-time', 'date', 'time'
-module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
-module = Email::Address::XS     ; required for format 'email', 'idn-email'
-module = Net::IDN::Encode       ; required for format 'idn-hostname'
+[Deprecated]
