suggest XS implementations for speed

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,8 @@ Email::Address::XS = 1.01   ; is_valid; softened later
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
+Ref::Util::XS = 0
+Cpanel::JSON::XS = 0
 
 [Prereqs::Soften]
 to_relationship = suggests
