fall back to DateTime to handle leap second lookups

--- a/dist.ini
+++ b/dist.ini
@@ -34,6 +34,7 @@ Cpanel::JSON::XS = 0
 to_relationship = suggests
 copy_to = develop.requires
 module = Time::Moment           ; required for format 'date-time', 'date', 'time'
+module = DateTime::Format::RFC3339 ; required for edge cases for format 'date-time'
 module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
 module = Email::Address::XS     ; required for format 'email', 'idn-email'
 module = Net::IDN::Encode       ; required for format 'idn-hostname'
