--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_year      = 2020
 license             = Perl_5
 
 [Run::BeforeRelease]
-eval = do './update-schemas'; die $@ if $@
+eval = do './update-schemas'; die $@ || $! if $@ || $!
 
 [@Author::ETHER]
 :version = 0.154
