add note re bundled files

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,11 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2020
 license             = Perl_5
 
+; ATTENTION DISTRO REPACKAGERS: do NOT use fresh copies of these files
+; from their source; it is important to include the original versions
+; of the files as they were packaged with this cpan distribution, or
+; surprising behaviour may occur.
+
 [Run::BeforeRelease]
 eval = do './update-schemas'; die $@ || $! if $@ || $!
 
