remove is_uri_reference
The OpenAPI vocabulary implementation no longer needs it.

--- a/dist.ini
+++ b/dist.ini
@@ -43,3 +43,6 @@ module = DateTime::Format::RFC3339 ; required for edge cases for format 'date-ti
 module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
 module = Email::Address::XS     ; required for format 'email', 'idn-email'
 module = Net::IDN::Encode       ; required for format 'idn-hostname'
+
+[Breaks]
+JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.017   ; is_uri_reference
