simplify installation: no legacy tooling here

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ eval = do './update-schemas'; die $@ || $! if $@ || $!
 [@Author::ETHER]
 :version = 0.154
 bugtracker = github
+installer = ModuleBuildTiny
 Test::MinimumVersion.max_target_perl = 5.020    ; may go higher later on
 Git::GatherDir.exclude_filename = pull_request_template.md
 Test::ReportPrereqs.include[0] = JSON::PP
