skip 404s test for now

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ Test::ReportPrereqs.include[0] = JSON::PP
 Test::ReportPrereqs.include[1] = Cpanel::JSON::XS
 Test::ReportPrereqs.include[2] = JSON::XS
 Test::ReportPrereqs.include[3] = Mojolicious
+-remove = Test::Pod::No404s ; some vocabulary class URIs now return 403 Forbidden
 
 [ShareDir]
 dir = share
