--- a/dist.ini
+++ b/dist.ini
@@ -28,7 +28,7 @@ Test::ReportPrereqs.include[3] = Mojolicious
 dir = share
 
 [Prereqs / RuntimeRequires]
-Mojolicious = 7.23  ; Mojo::URL::to_unsafe_string
+Mojolicious = 7.87  ; Mojo::JSON::JSON_XS
 Email::Address::XS = 1.04   ; softened later
 
 [Prereqs / RuntimeSuggests]
