also report the installed versions of bignum modules

--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,8 @@ Test::ReportPrereqs.include[2] = JSON::XS
 Test::ReportPrereqs.include[3] = Mojolicious
 Test::ReportPrereqs.include[4] = Sereal::Encoder
 Test::ReportPrereqs.include[5] = Sereal::Decoder
+Test::ReportPrereqs.include[6] = Math::BigInt
+Test::ReportPrereqs.include[7] = Math::BigFloat
 -remove = Test::Pod::No404s ; some vocabulary class URIs now return 403 Forbidden
 
 [ShareDir]
