--- a/.github/workflows/dzil-build-and-test.yml
+++ b/.github/workflows/dzil-build-and-test.yml
@@ -3,10 +3,10 @@ name: dzil build and test
 on:
   push:
     branches:
-      - "master"
-  pull_request:
-    branches:
       - "*"
+    tags-ignore:
+      - "*"
+  pull_request:
   workflow_dispatch:
 
 jobs:
