ensure Sereal is installed for development

--- a/dist.ini
+++ b/dist.ini
@@ -34,6 +34,7 @@ dir = share
 [Prereqs / RuntimeRequires]
 Mojolicious = 7.87  ; Mojo::JSON::JSON_XS
 Email::Address::XS = 1.04   ; softened later
+Sereal = 0 ; softened later
 
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
@@ -49,6 +50,7 @@ module = DateTime::Format::RFC3339 ; required for edge cases for format 'date-ti
 module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
 module = Email::Address::XS     ; required for format 'email', 'idn-email'
 module = Net::IDN::Encode       ; required for format 'idn-hostname'
+module = Sereal                 ; required for serialization support
 
 [Breaks]
 JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.017   ; is_uri_reference
