use builtin::is_bool where available

--- a/dist.ini
+++ b/dist.ini
@@ -33,14 +33,15 @@ dir = share
 
 [Prereqs / RuntimeRequires]
 Mojolicious = 7.87  ; Mojo::JSON::JSON_XS
-Email::Address::XS = 1.04   ; softened later
-Sereal = 0 ; softened later
+Email::Address::XS = 1.04 ; softened later
+Sereal = 0                ; softened later
+JSON::PP = 4.11           ; softened later
+Cpanel::JSON::XS = 4.38   ; softened later
 
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
 Ref::Util::XS = 0
-Cpanel::JSON::XS = 0
 
 [Prereqs::Soften]
 to_relationship = suggests
@@ -51,6 +52,8 @@ module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
 module = Email::Address::XS     ; required for format 'email', 'idn-email'
 module = Net::IDN::Encode       ; required for format 'idn-hostname'
 module = Sereal                 ; required for serialization support
+JSON::PP = 4.11                 ; support for core bools
+Cpanel::JSON::XS = 4.38         ; support for core bools
 
 [Breaks]
 JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.017   ; is_uri_reference
