bisection reveals this is the first working version
e.g. see https://www.cpantesters.org/cpan/report/04aace24-34ac-11ef-98b0-b3c3213a625c
for examples of failures

This version first shipped in core with perl v5.23.0.

--- a/dist.ini
+++ b/dist.ini
@@ -32,7 +32,8 @@ Test::ReportPrereqs.include[7] = Math::BigFloat
 dir = share
 
 [Prereqs / RuntimeRequires]
-Mojolicious = 7.87  ; Mojo::JSON::JSON_XS
+Mojolicious = 7.87        ; Mojo::JSON::JSON_XS
+Math::BigInt = 1.999701   ; bdiv and bmod fixes
 Email::Address::XS = 1.04 ; softened later
 Sereal = 0                ; softened later
 JSON::PP = 4.11           ; softened later
