--- a/dist.ini
+++ b/dist.ini
@@ -38,6 +38,7 @@ Email::Address::XS = 1.04 ; softened later
 Sereal = 0                ; softened later
 JSON::PP = 4.11           ; softened later
 Cpanel::JSON::XS = 4.38   ; softened later
+builtin::compat = 0.003003
 
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
