daylight potential conflicts between builtin::compat and builtin::Bootstrap

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,7 @@ Test::ReportPrereqs.include[4] = Sereal::Encoder
 Test::ReportPrereqs.include[5] = Sereal::Decoder
 Test::ReportPrereqs.include[6] = Math::BigInt
 Test::ReportPrereqs.include[7] = Math::BigFloat
+Test::ReportPrereqs.include[8] = builtin
 -remove = Test::Pod::No404s ; some vocabulary class URIs now return 403 Forbidden
 
 [ShareDir]
