--- a/dist.ini
+++ b/dist.ini
@@ -60,7 +60,7 @@ Cpanel::JSON::XS = 4.38         ; support for core bools
 
 [Breaks]
 JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.017   ; is_uri_reference
-JSON::Schema::Modern::Document::OpenAPI = < 0.079     ; error mode; traverse now accepts a third argument
+JSON::Schema::Modern::Document::OpenAPI = < 0.079     ; error mode; traverse now accepts a third argument; identifiers is a hashref
 OpenAPI::Modern = < 0.077                             ; ::Result boolean overload
 Mojolicious::Plugin::OpenAPI::Modern = < 0.014        ; ::Result boolean overload
 Test::Mojo::Role::OpenAPI::Modern = < 0.007           ; ::Result boolean overload
