--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ Test::ReportPrereqs.include[5] = Sereal::Decoder
 Test::ReportPrereqs.include[6] = Math::BigInt
 Test::ReportPrereqs.include[7] = Math::BigFloat
 Test::ReportPrereqs.include[8] = builtin
+Test::ReportPrereqs.include[9] = builtin::Backport
 -remove = Test::Pod::No404s ; some vocabulary class URIs now return 403 Forbidden
 
 [ShareDir]
