the time format does not require Time::Moment

--- a/dist.ini
+++ b/dist.ini
@@ -53,7 +53,7 @@ Ref::Util::XS = 0
 [Prereqs::Soften]
 to_relationship = suggests
 copy_to = develop.requires
-module = Time::Moment           ; required for format 'date-time', 'date', 'time'
+module = Time::Moment           ; required for format 'date-time', 'date'
 module = DateTime::Format::RFC3339 ; required for edge cases for format 'date-time'
 module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
 module = Email::Address::XS     ; required for format 'email', 'idn-email'
