rename "schema_path" to the more accurate "keyword_path"

--- a/dist.ini
+++ b/dist.ini
@@ -64,7 +64,7 @@ Cpanel::JSON::XS = 4.38         ; support for core bools
 
 [Breaks]
 JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.080   ; discriminator traversal error status
-JSON::Schema::Modern::Document::OpenAPI = < 0.091     ; new property in anchor sub-resources; $state key renaming, removal
+JSON::Schema::Modern::Document::OpenAPI = < 0.097     ; $state key renaming
 OpenAPI::Modern = < 0.077                             ; ::Result boolean overload
 Mojolicious::Plugin::OpenAPI::Modern = < 0.014        ; ::Result boolean overload
 Test::Mojo::Role::OpenAPI::Modern = < 0.007           ; ::Result boolean overload
