better specify our dependencies on JSON backends

--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,7 @@ eval = do './update-schemas'; die $@ || $! if $@ || $!
 [@Author::ETHER]
 :version = 0.154
 bugtracker = github
-installer = ModuleBuildTiny
+installer = MakeMaker
 Test::MinimumVersion.max_target_perl = 5.020    ; may go higher later on
 Git::GatherDir.exclude_filename = pull_request_template.md
 Test::ReportPrereqs.include[0] = JSON::PP
@@ -59,8 +59,17 @@ module = Data::Validate::Domain ; required for format 'hostname', 'idn-hostname'
 module = Email::Address::XS     ; required for format 'email', 'idn-email'
 module = Net::IDN::Encode       ; required for format 'idn-hostname'
 module = Sereal                 ; required for serialization support
-JSON::PP = 4.11                 ; support for core bools
-Cpanel::JSON::XS = 4.38         ; support for core bools
+module = JSON::PP               ; support for core bools
+module = Cpanel::JSON::XS       ; support for core bools
+
+[DynamicPrereqs]
+-delimiter = |
+-body = |if (!want_pp() && can_xs()) {
+-body = |  requires('Cpanel::JSON::XS', '4.38');
+-body = |}
+-body = |else {
+-body = |  requires('JSON::PP', '4.11');
+-body = |}
 
 [Breaks]
 JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.080   ; discriminator traversal error status
